Updated the model

--- a/templates/about.html
+++ b/templates/about.html
@@ -38,7 +38,7 @@
             <li>User registration and authentication using OAuth2 and JWT tokens.</li>
             <li>Prediction form where users can input match details and get predictions using pre-trained machine
                 learning models.</li>
-            <li>Three types of predictions: Linear Regression, Random Forest Regressor, and Random Forest Classifier.
+            <li>Prediction using Linear Regression
             </li>
             <li>Responsive design with Bootstrap for a smooth user experience.</li>
         </ul>
