--- a/templates/result.html
+++ b/templates/result.html
@@ -62,12 +62,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Predicted Score</td>
-                    <td>{{ predictions['avg_run']}}</td>
-                </tr>
-                <tr>
-                    <td>Predicted Winner</td>
-                    <td>{{ predictions['Random_Forest_Classifier'] }}</td>
+                    <td>Predicted Score Range</td>
+                    <td>{{ lower_limit }} - {{ upper_limit }}</td>
                 </tr>
             </tbody>
         </table>
