--- a/templates/predict_form.html
+++ b/templates/predict_form.html
@@ -10,6 +10,10 @@
         body {
             background-color: #e9ecef;
             font-family: Arial, sans-serif;
+            background-image: url('static/img/ipl.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
 
         .container {
@@ -22,12 +26,13 @@
         }
 
         .navbar {
-            background-color: #007bff;
+            /* background-color: #007bff; */
             color: #ffffff;
         }
 
         .navbar-brand {
             color: #ffffff;
+            font-size: xx-large;
         }
 
         .navbar-nav .nav-link {
@@ -97,9 +102,11 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">IPL Prediction App</a>
+        <a class="navbar-brand" href="#">
+            <p style="color: #ffffff;">IPL Prediction App</p>
+        </a>
         <div class="nav-buttons ml-auto">
-            <a href="/" class="btn btn-secondary">Login</a>
+            <a href="/" class="btn btn-secondary">Logout</a>
             <a href="/about" class="btn btn-secondary">About</a>
         </div>
     </nav>
